# smart_desktop_analytics_app

./: .gitignore  data_registry.db  package-lock.json  package.json
backend/: __init__.py  backend-engine.spec  data_registry.db  ipc_handler.py  main.py  requirements.txt
backend/analysis/: suggestions.py
backend/core/: dataset.py  erd_engine.py  query_model.py  registry.py
backend/data_io/: ingestor.py
backend/execution/: engine.py
backend/formatting/: chart.py  statement.py  table.py
data_samples/: sales.csv
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/components/AnalyticsDashboard/: AnalyticsDashboard.css  AnalyticsDashboard.tsx
frontend/components/DataExplorer/: DataExplorer.css  DataExplorer.tsx
frontend/components/ERD/: ERDCanvas.tsx  ERDView.css  ERDView.tsx
frontend/components/common/: Apiconnector.tsx
frontend/services/: ClientDataEngine.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/binaries/: data_registry.db
frontend/src-tauri/src/: main.rs
frontend/src/types/: Query.ts
tests/: test_imports.py
