[package]
name = "smart-desktop-analytics"
version = "0.1.0"
description = "Smart Desktop Analytics"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1.0", features = ["full"] }
